# 618-Launcher

./: .gitignore  Cargo.toml  LICENSE
.claude/: settings.local.json
src/: app.rs  constants.rs  main.rs  message.rs
src/components/: mod.rs
src/data/: category.rs  config.rs  game.rs  library.rs  mod.rs
src/import/: epic.rs  gog.rs  manual.rs  mod.rs  steam.rs
src/launcher/: mod.rs  process.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/theme/: mod.rs  palette.rs
src/theme/default/: dark.json  light.json
src/views/: mod.rs
