[package]
name = "launcher-618"
version = "0.1.0"
edition = "2021"
description = "A lightweight, cross-platform game launcher"
authors = ["Krunal Amin"]
license = "MIT"

[dependencies]
# GUI Framework
iced = { version = "0.14", features = ["tokio", "image"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cross-platform paths
directories = "5"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.55"

# Optional GOG support (requires SQLite)
[target.'cfg(windows)'.dependencies.rusqlite]
version = "0.32"
optional = true

[features]
default = []
gog = ["rusqlite"]

[profile.release]
lto = true
codegen-units = 1
strip = true
